--- a/ros2_ws/src/turtlesim_main_py_pkg/package.xml
+++ b/ros2_ws/src/turtlesim_main_py_pkg/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>turtle_sim_main_pkg</name>
+  <name>turtlesim_main_py_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="udo.kelenna.uma.15@gmail.com">kelenna-udo</maintainer>
